# signal-sema

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix  magnitude.schema.nota  skills.md
examples/: canonical.nota
schema/: signal-sema.concept.schema
src/: identity.rs  lib.rs  magnitude.rs  operation.rs  outcome.rs  pattern.rs
tests/: dependency_boundary.rs  identity.rs  magnitude.rs  operation.rs  outcome.rs  pattern.rs
